fullSandbox11072023/force-app/main/default/objects/VPS_Consumables__c/VPS_Consumables__c.object-meta.xml
<CustomObject>
    <label>Specialty Consumables</label>
    <nameField>
        <label>VPS Consumables Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Specialty Consumables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>