fullSandbox11072023/force-app/main/default/objects/VPS_Consumables__c/fields/Current_Sales_2__c.field-meta.xml
<CustomField>
    <fullName>Current_Sales_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Sales (2)</label>
    <type>Checkbox</type>
</CustomField>