fullSandbox11072023/force-app/main/default/objects/VPS_Consumables__c/fields/Current_Sales__c.field-meta.xml
<CustomField>
    <fullName>Current_Sales__c</fullName>
    <formula>YEAR(Date__c) =  Year(Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to evaluate Current Sales Start and End Date Now evaluates This Year</inlineHelpText>
    <label>Current Sales</label>
    <type>Checkbox</type>
</CustomField>