fullSandbox11072023/force-app/main/default/objects/VPS_Consumables__c/fields/Current_Year_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Quantity__c</fullName>
    <label>Current Year Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>