fullSandbox11072023/force-app/main/default/objects/VPS_Consumables__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <formula>Current_Sales_Start_Date__c-today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>