fullSandbox11072023/force-app/main/default/objects/VPS_Consumables__c/fields/Invoiced_Sales_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Sales_ID__c</fullName>
    <externalId>true</externalId>
    <label>Invoiced Sales ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>