fullSandbox11072023/force-app/main/default/objects/VPS_Consumables__c/fields/Maxtec__c.field-meta.xml
<CustomField>
    <fullName>Maxtec__c</fullName>
    <formula>Product__r.Heater_Contracts_Maxtec__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maxtec</label>
    <type>Checkbox</type>
</CustomField>