fullSandbox11072023/force-app/main/default/objects/VPS_Consumables__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>VPS_Consumables</relationshipName>
    <type>Lookup</type>
</CustomField>