fullSandbox11072023/force-app/main/default/objects/VPS_Consumables__c/fields/Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Class__c</fullName>
    <formula>Product__r.Class__c</formula>
    <label>Product Class</label>
    <type>Text</type>
</CustomField>