fullSandbox11072023/force-app/main/default/objects/VPS_Consumables__c/fields/Product_Grouping_TXT__c.field-meta.xml
<CustomField>
    <fullName>Product_Grouping_TXT__c</fullName>
    <label>Product Grouping (TXT)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>