fullSandbox11072023/force-app/main/default/objects/VPS_Consumables__c/fields/Product_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Text__c</fullName>
    <label>Product Text</label>
    <length>35</length>
    <type>Text</type>
</CustomField>