fullSandbox11072023/force-app/main/default/objects/VPS_Consumables__c/fields/Resp_Heater_Consumables__c.field-meta.xml
<CustomField>
    <fullName>Resp_Heater_Consumables__c</fullName>
    <formula>Product__r.Heater_Consumables__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resp. Heater Consumables</label>
    <type>Checkbox</type>
</CustomField>