fullSandbox11072023/force-app/main/default/objects/VPS_Consumables__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <label>Sales</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>