fullSandbox11072023/force-app/main/default/objects/VPS_Consumables__c/fields/Sales_This_Cal_Year2__c.field-meta.xml
<CustomField>
    <fullName>Sales_This_Cal_Year2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales This Cal Year?2</label>
    <type>Checkbox</type>
</CustomField>