fullSandbox11072023/force-app/main/default/objects/VPS_Consumables__c/fields/Two_Years_Prior_Quantity_Text2__c.field-meta.xml
<CustomField>
    <fullName>Two_Years_Prior_Quantity_Text2__c</fullName>
    <label>2 Years Prior Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>