fullSandbox11072023/force-app/main/default/objects/VPS_Consumables__c/fields/VPS_Consumable__c.field-meta.xml
<CustomField>
    <fullName>VPS_Consumable__c</fullName>
    <formula>Product__r.VPS_Consumable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VPS Consumable</label>
    <type>Checkbox</type>
</CustomField>