fullSandbox11072023/force-app/main/default/objects/VPS_Consumables__c/fields/VPS_Contract__c.field-meta.xml
<CustomField>
    <fullName>VPS_Contract__c</fullName>
    <label>VPS Contract</label>
    <referenceTo>VPS__c</referenceTo>
    <relationshipName>VPS_Consumables1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>