fullSandbox11072023/force-app/main/default/objects/VPS_Consumables__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Test__c</columns>
    <columns>Date__c</columns>
    <columns>Current_Year__c</columns>
    <columns>Current_Year_Quantity__c</columns>
    <columns>Prior_Year__c</columns>
    <columns>Prior_Year_Quantity__c</columns>
    <columns>X2_Years_Prior__c</columns>
    <columns>Two_Years_Prior_Quantity_Text2__c</columns>
    <columns>VPS_Contract__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>